# -windows2

./: .gitignore
pro/: CMakeLists.txt  MVP3多节点运行说明.txt  chunk_index_A0.tsv  chunk_index_A0.tsv.manifest  readme.txt  前端接口使用方法.txt  后续可补充完善点.txt  后续开发步骤.txt  启动运行配置说明.txt  固定prompt.txt  多节点启动模拟说明.txt  完成可持续上传下载后_当前阶段与剩余任务.txt  开发步骤总览.txt  持久化数据清单_上传与下载.txt  每次写代码固定prompt.txt  测试记录.txt  测试过程中遇到问题.txt  项目完成顺序.txt  项目架构设计.txt  验证_性能.sh
pro/configs/: app.yaml  local_p2p_9002.yaml
pro/docs/: README.txt
pro/frontend/: README.txt  app.js  index.html  styles.css
pro/include/: chunk_store.h  config.h  crypto_tunnel.h  crypto_utils.h  hex_utils.h  logger.h  p2p_node.h  protocol.h  routing_table.h  scheduler.h  secure_transport.h  sha256.h  tcp_transport.h
pro/scripts/: Untitled  build.sh  run_6node_integration_test.sh  run_ab_replica_compare.sh  run_all_tests.sh  run_dht_3node_test.sh  run_full_feature_e2e.sh  run_mvp2_network_demo.sh  run_mvp3_find_chunk_demo.sh  run_mvp4_3node_bigfile_test.sh  run_mvp4_3node_test.sh  run_mvp4_8node_bigfile_test.sh  run_mvp4_secure_demo.sh  run_mvp5_replica_demo.sh  run_stats_query_test.sh  run_teacher_verify_crypto.sh  run_teacher_verify_ha.sh  run_teacher_verify_perf.sh
pro/scripts/统计查询测试结果/: README.txt  stats_download.json  stats_upload_meta.json  (+1 more)
pro/src/: chunk_store.cpp  config.cpp  crypto_tunnel.cpp  crypto_utils.cpp  hex_utils.cpp  logger.cpp  main.cpp  mvp4+后续计划.txt  p2p_node.cpp  protocol.cpp  routing_table.cpp  scheduler.cpp  secure_transport.cpp  sha256.cpp  tcp_transport.cpp
pro/tests/: test_placeholder.cpp
(+22 files in other folders)
